--- a/Affiliates.html
+++ b/Affiliates.html
@@ -40,15 +40,15 @@
 
 		<p><strong>Jon "Priority"</strong><br>
 		<img src="Jon.jpg" height=250 width=250>
-		<br>Videographer. Enigma. Soul Brother.
+		<br>Videographer. 
 			<br>Links:<br>
 			<a href="https://www.youtube.com/channel/UC4UfOYDts5QILK5P-oEeJYA" target="_blank">YouTube</a><br>
 			<a href="https://twitter.com/PriorityNone01" target="_blank">Twitter</a><br>
 			<a href="https://www.instagram.com/priority_none_ent/" target="_blank">Instagram</a><br><hr></p>
 
-		<p><strong>Fred "Deacon"</strong><br>
+		<p><strong>Fred ""</strong><br>
 		<img src="Fred.jpg" height=250 width=250>
-		<br>Cocktail Conductor. Thrill Seeker. Point Man.
+		<br>Cocktail Conductor. Thrill Seeker. 
 			<br>Links:<br>
 			<a href="https://twitter.com/Fred_Dodson" target="_blank">Twitter</a><br>
 			<a href="https://www.instagram.com/freddodson/" target="_blank">Instagram</a><br><hr></p>
