--- a/Nobody's News.html
+++ b/Nobody's News.html
@@ -22,7 +22,7 @@
 			<input type="checkbox" value="Gaming"> Gaming 
 			<input type="checkbox" value="Photography"> Photography
 			<input type="checkbox" value="Music"> Music 
-			<input type="checkbox" value="Podcast"> Podcast
+			<input type="checkbox" value="Podcasts"> Podcasts
 		</form>
 	</body>
 	<input type="submit">
