--- a/Affiliates.html
+++ b/Affiliates.html
@@ -3,35 +3,89 @@
 <!-- People inducted into the brotherhood/sisterhood. -->
 	<head>
 		<title>Affiliates</title>
-		<style>
-		h1 {text-align: center;}
-		h2 {text-align: center;}
-		p {text-align: center;}
-		div {text-align: center;}
-		</style>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+		<link rel="stylesheet" type="text/css" href="styles2.css">
 	</head>
 	<body>
-		<h1>Affiliates</h1>
-		<p><a href="index.html">Home</a>
-		<a href="Nobody's News.html">Nobody's News</a><br>
-		<br>Around here we audit authority.<br>
-		
-		<br><strong>Jevon "Casualties"</strong>
-		<br><img src="Jevon.jpg" height=250 width=250>
-		<br>Facilitator. Poet. Renaissance Chaser.
-			<br>Links:<br>
-			<a href="https://medium.com/@ThinkingwithJevon" target="_blank">Medium</a><br>
-			<a href="https://twitter.com/SirJJThe1st" target="_blank">Twitter</a><br>
-			<a href="https://www.instagram.com/bluesandcrews/" target="_blank">Instagram</a><hr></p>
+		<nav class="navbar navbar-dark bg-dark">
+		  <a class="navbar-brand" href="#">Affiliates</a>
+		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		    <span class="navbar-toggler-icon"></span>
+		  </button>
 
-		<p><strong>Ken "Crewneck"</strong><br>
-		<img src="Ken.jpg" height=250 width=250>
-		<br>Audiophile. Brew Master. Jokester.
-			<br>Links:<br>
-			<a href="https://twitter.com/EarlCrewneck" target="_blank">Twitter</a><br>
-			<a href="https://www.instagram.com/kencrewneck/" target="_blank">Instagram</a><br><hr></p>
+		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+		    <ul class="navbar-nav mr-auto">
+		      <li class="nav-item active">
+		        <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" href="Affiliates.html">Affiliates</a>
+		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" href="https://mailchi.mp/c5620b21811d/nbhrnewsletter">Nobody's News</a>
+		      </li>
+		      <li class="nav-item dropdown">
+		        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		          Dropdown
+		        </a>
+		        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+		          <a class="dropdown-item" href="#">Action</a>
+		          <a class="dropdown-item" href="#">Another action</a>
+		          <div class="dropdown-divider"></div>
+		          <a class="dropdown-item" href="#">Something else here</a>
+		        </div>
+		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+		      </li>
+		    </ul>
+		    <form class="form-inline my-2 my-lg-0">
+		      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+		      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+		    </form>
+		  </div>
+		</nav>
+		<p>Around here we audit authority<br>
+			<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" data-interval=false>
+			  <ol class="carousel-indicators">
+			    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+			    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+			    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+			  </ol>
+			  <div class="carousel-inner">
+			    <div class="carousel-item active">
+			      <img src="Jevon.jpg" height=650 class="d-block w-100" alt="...">
+			      <div class="carousel-caption d-none d-md-block">
+			        <h5>Jevon "Casualties"</h5>
+			        <p>Facilitator. Poet. Renaissance Chaser</p>
+			      </div>
+			    </div>
+			    <div class="carousel-item">
+			      <img src="Ken.jpg" height=650 class="d-block w-100" alt="...">
+			      <div class="carousel-caption d-none d-md-block">
+			        <h5>Ken "Crewneck"</h5>
+			        <p>Audiophile. Brew Master. Jokester</p>
+			      </div>
+			    </div>
+			    <div class="carousel-item">
+			      <img src="Darius.jpg" height=650 class="d-block w-100" alt="...">
+			      <div class="carousel-caption d-none d-md-block">
+			        <h5>Darius "Hendrixx"</h5>
+			        <p>Dreamer. Sommelier. FPS Magnate</p>
+			      </div>
+			    </div>
+			  </div>
+			  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+			    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			    <span class="sr-only">Previous</span>
+			  </a>
+			  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+			    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+			    <span class="sr-only">Next</span>
+			  </a>
+			</div>
 
-		<p><strong>Darius "Hendrixx"</strong><br>
+	<!-- 	<p><strong>Darius "Hendrixx"</strong><br>
 		<img src="Darius.jpg" height=250 width=250>
 		<br>Dreamer. "Sommelier". FPS Magnate.
 			<br>Links:<br>
@@ -67,9 +121,9 @@
 			<br>Links:<br>
 			<a href="https://www.youtube.com/channel/UCGuwrOJ-2ASZO3ZspwF5TZA" target="_blank">YouTube</a><br>
 			<a href="https://twitter.com/JoJoTheCreative" target="_blank">Twitter</a><br>
-			<a href="https://www.instagram.com/jojo_thecreative/" target="_blank">Instagram</a><br></p>
+			<a href="https://www.instagram.com/jojo_thecreative/" target="_blank">Instagram</a><br></p> -->
 
-
-
+		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 	</body>
 </html>
