--- a/Affiliates.html
+++ b/Affiliates.html
@@ -24,28 +24,10 @@
 		      <li class="nav-item">
 		        <a class="nav-link" href="https://mailchi.mp/c5620b21811d/nbhrnewsletter">Nobody's News</a>
 		      </li>
-		      <li class="nav-item dropdown">
-		        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-		          Dropdown
-		        </a>
-		        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-		          <a class="dropdown-item" href="#">Action</a>
-		          <a class="dropdown-item" href="#">Another action</a>
-		          <div class="dropdown-divider"></div>
-		          <a class="dropdown-item" href="#">Something else here</a>
-		        </div>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-		      </li>
-		    </ul>
-		    <form class="form-inline my-2 my-lg-0">
-		      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-		      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 		    </form>
 		  </div>
 		</nav>
-		<p>Around here we audit authority<br>
+		<p class="top">Around here we audit authority<br>
 			<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" data-interval=false>
 			  <ol class="carousel-indicators">
 			    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -55,21 +37,41 @@
 			  <div class="carousel-inner">
 			    <div class="carousel-item active">
 			      <img src="Jevon.jpg" height=650 class="d-block w-100" alt="...">
-			      <div class="carousel-caption d-none d-md-block">
+			      <div class="carousel-caption d-xs-block">
 			        <h5>Jevon "Casualties"</h5>
 			        <p>Facilitator. Poet. Renaissance Chaser</p>
 			      </div>
 			    </div>
 			    <div class="carousel-item">
 			      <img src="Ken.jpg" height=650 class="d-block w-100" alt="...">
-			      <div class="carousel-caption d-none d-md-block">
+			      <div class="carousel-caption d-xs-block">
 			        <h5>Ken "Crewneck"</h5>
 			        <p>Audiophile. Brew Master. Jokester</p>
 			      </div>
 			    </div>
 			    <div class="carousel-item">
 			      <img src="Darius.jpg" height=650 class="d-block w-100" alt="...">
-			      <div class="carousel-caption d-none d-md-block">
+			      <div class="carousel-caption d-xs-block">
+			        <h5>Darius "Hendrixx"</h5>
+			        <p>Dreamer. Sommelier. FPS Magnate</p>
+			        div class="carousel-item">
+			      <img src="Jon.jpg" height=650 class="d-block w-100" alt="...">
+			      <div class="carousel-caption d-xs-block">
+			        <h5>Darius "Hendrixx"</h5>
+			        <p>Dreamer. Sommelier. FPS Magnate</p>
+			        div class="carousel-item">
+			      <img src="Darius.jpg" height=650 class="d-block w-100" alt="...">
+			      <div class="carousel-caption d-xs-block">
+			        <h5>Darius "Hendrixx"</h5>
+			        <p>Dreamer. Sommelier. FPS Magnate</p>
+			        div class="carousel-item">
+			      <img src="Darius.jpg" height=650 class="d-block w-100" alt="...">
+			      <div class="carousel-caption d-xs-block">
+			        <h5>Darius "Hendrixx"</h5>
+			        <p>Dreamer. Sommelier. FPS Magnate</p>
+			        div class="carousel-item">
+			      <img src="Darius.jpg" height=650 class="d-block w-100" alt="...">
+			      <div class="carousel-caption d-xs-block">
 			        <h5>Darius "Hendrixx"</h5>
 			        <p>Dreamer. Sommelier. FPS Magnate</p>
 			      </div>
@@ -84,14 +86,7 @@
 			    <span class="sr-only">Next</span>
 			  </a>
 			</div>
-
-	<!-- 	<p><strong>Darius "Hendrixx"</strong><br>
-		<img src="Darius.jpg" height=250 width=250>
-		<br>Dreamer. "Sommelier". FPS Magnate.
-			<br>Links:<br>
-			<a href="https://twitter.com/StillArrogant_" target="_blank">Twitter<br>
-			<a href="https://www.instagram.com/stillarrogant_/" target="_blank">Instagram</a><br><hr></p>
-
+	<!-- 	
 		<p><strong>Jon "Priority"</strong><br>
 		<img src="Jon.jpg" height=250 width=250>
 		<br>Videographer. Enigma. Soul Brother.
