--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 		  </div>
 		</nav>
 
-		<br><p>Your place to keep up with your favorite Anti-Heroes</p>
-		<p>Welcome...<br>
-		Join our endeavors here!</p>
+		<br><p class="welcome">Your place to keep up with your favorite Anti-Heroes<br>
+			<br>Welcome...<br>
+			<br>Join our endeavors here!</p>
 
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
