--- a/Affiliates.html
+++ b/Affiliates.html
@@ -24,6 +24,9 @@
 		      <li class="nav-item">
 		        <a class="nav-link" href="https://mailchi.mp/c5620b21811d/nbhrnewsletter">Nobody's News</a>
 		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" href="">Create x Conquer</a>
+		      </li>
 		    </form>
 		  </div>
 		</nav>
@@ -33,6 +36,10 @@
 			    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
 			    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
 			    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+			    <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+			    <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
+			    <li data-target="#carouselExampleCaptions" data-slide-to="5"></li>
+			    <li data-target="#carouselExampleCaptions" data-slide-to="6"></li>
 			  </ol>
 			  <div class="carousel-inner">
 			    <div class="carousel-item active">
@@ -53,30 +60,37 @@
 			      <img src="Darius.jpg" height=650 class="d-block w-100" alt="...">
 			      <div class="carousel-caption d-xs-block">
 			        <h5>Darius "Hendrixx"</h5>
-			        <p>Dreamer. Sommelier. FPS Magnate</p>
-			        div class="carousel-item">
+			        <p>Dreamer. Sommelier. FPS Magnate.</p>
+			       </div>
+			      </div>
+			        <div class="carousel-item">
 			      <img src="Jon.jpg" height=650 class="d-block w-100" alt="...">
 			      <div class="carousel-caption d-xs-block">
-			        <h5>Darius "Hendrixx"</h5>
-			        <p>Dreamer. Sommelier. FPS Magnate</p>
-			        div class="carousel-item">
-			      <img src="Darius.jpg" height=650 class="d-block w-100" alt="...">
-			      <div class="carousel-caption d-xs-block">
-			        <h5>Darius "Hendrixx"</h5>
-			        <p>Dreamer. Sommelier. FPS Magnate</p>
-			        div class="carousel-item">
-			      <img src="Darius.jpg" height=650 class="d-block w-100" alt="...">
-			      <div class="carousel-caption d-xs-block">
-			        <h5>Darius "Hendrixx"</h5>
-			        <p>Dreamer. Sommelier. FPS Magnate</p>
-			        div class="carousel-item">
-			      <img src="Darius.jpg" height=650 class="d-block w-100" alt="...">
-			      <div class="carousel-caption d-xs-block">
-			        <h5>Darius "Hendrixx"</h5>
-			        <p>Dreamer. Sommelier. FPS Magnate</p>
+			        <h5>Jon "Priority"</h5>
+			        <p>Videographer. Enigma. Soul Brother.</p>
+			       </div>
 			      </div>
-			    </div>
-			  </div>
+			       <div class="carousel-item">
+			      <img src="Fred.jpg" height=650 class="d-block w-100" alt="...">
+			      <div class="carousel-caption d-xs-block">
+			        <h5>Fred "Deacon"</h5>
+			        <p>Cocktail Conductor. Thrill Seeker. Point Man</p>
+			       </div>
+			      </div>
+			       <div class="carousel-item">
+			      <img src="Tyler.jpg" height=650 class="d-block w-100" alt="...">
+			      <div class="carousel-caption d-xs-block">
+			        <h5>Tyler "Slim"</h5>
+			        <p>Photographer. 50 Yard Menace. Loyalist.</p>
+			       </div>
+			      </div>
+			       <div class="carousel-item">
+			      <img src="Jordan.jpg" height=650 class="d-block w-100" alt="...">
+			      <div class="carousel-caption d-xs-block">
+			        <h5>Jordan "Scar"</h5>
+			        <p>Photographer. Marksman. Reformed Vandal.</p>
+			       </div>
+			      </div>
 			  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
 			    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
 			    <span class="sr-only">Previous</span>
@@ -86,37 +100,6 @@
 			    <span class="sr-only">Next</span>
 			  </a>
 			</div>
-	<!-- 	
-		<p><strong>Jon "Priority"</strong><br>
-		<img src="Jon.jpg" height=250 width=250>
-		<br>Videographer. Enigma. Soul Brother.
-			<br>Links:<br>
-			<a href="https://www.youtube.com/channel/UC4UfOYDts5QILK5P-oEeJYA" target="_blank">YouTube</a><br>
-			<a href="https://twitter.com/PriorityNone01" target="_blank">Twitter</a><br>
-			<a href="https://www.instagram.com/priority_none_ent/" target="_blank">Instagram</a><br><hr></p>
-
-		<p><strong>Fred "Deacon"</strong><br>
-		<img src="Fred.jpg" height=250 width=250>
-		<br>Cocktail Conductor. Thrill Seeker. Point Man.
-			<br>Links:<br>
-			<a href="https://twitter.com/Fred_Dodson" target="_blank">Twitter</a><br>
-			<a href="https://www.instagram.com/freddodson/" target="_blank">Instagram</a><br><hr></p>
-
-
-		<p><strong>Tyler "Slim"</strong><br>
-		<img src="Tyler.jpg" height=250 width=250>
-		<br>Photographer. 50 Yard Menace. Loyalist.
-			<br>Links:<br>
-			<a href="https://twitter.com/TyMyKix" target="_blank">Twitter</a><br>
-			<a href="https://www.instagram.com/cxc.slim/" target="_blank">Instagram</a><br><hr></p>
-
-		<p><strong>Jordan "Scar"</strong><br>
-		<img src="Jordan.jpg" height=250 width=250>
-		<br>Photographer. Sniper. Reformed Vandal.
-			<br>Links:<br>
-			<a href="https://www.youtube.com/channel/UCGuwrOJ-2ASZO3ZspwF5TZA" target="_blank">YouTube</a><br>
-			<a href="https://twitter.com/JoJoTheCreative" target="_blank">Twitter</a><br>
-			<a href="https://www.instagram.com/jojo_thecreative/" target="_blank">Instagram</a><br></p> -->
 
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
